make notif service in root service
